<resources>
    <string name="app_name">Inventory</string>

    <!-- activity_main layout -->
    <string name="sell">Sell</string>
    <string name="name">Name:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>

    <!-- DetailsActivity Titles -->
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>

    <!-- MainActivity Menu Options -->
    <string name="menu_main_add_dummy_item">Add Example Item</string>
    <string name="menu_main_delete_all_data">Delete All Data</string>

    <!-- DetailsActivity Menu Options -->
    <string name="menu_details_save_item">Save</string>
    <string name="menu_details_delete_item">Delete Item</string>

    <!-- MainActivity TextViews -->
    <string name="empty_view_text">Add an item by clicking the button in the bottom corner\nor by pressing Add Example Item in the options menu.</string>

    <!-- DetailsActivity TextViews -->
    <string name="details_name">Item Name</string>
    <string name="details_price">Price</string>
    <string name="details_quantity">Quantity</string>
    <string name="details_supplier_name">Supplier Name</string>
    <string name="details_supplier_phone">Supplier Phone Number</string>
    <string name="add_item_requirements">All fields are required to be filled in.</string>

    <!-- MainActivity Toast Messages -->
    <string name="all_data_deleted">All data deleted</string>
    <string name="error_deleting_data">Error deleting data</string>

    <!-- DetailsActivity Toast Messages -->
    <string name="quantity_below_zero">Quantity cannot go below 0</string>
    <string name="error_saving_item">Error saving item</string>
    <string name="item_saved">Item saved</string>
    <string name="error_updating_item">Error updating item</string>
    <string name="item_updated">Item updated</string>
    <string name="error_deleting_item">Error deleting item</string>
    <string name="item_deleted">Item deleted</string>
    <string name="save_required_name">Name is required</string>
    <string name="save_required_price">Price is required</string>
    <string name="save_required_supplier_name">Supplier Name is required</string>
    <string name="save_required_supplier_phone">Supplier Phone Number is required</string>

    <!-- Dialog messages -->
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="confirm_save">Are you sure you want to save changes to this item?</string>
    <string name="confirm_delete">Are you sure you want to delete this item?</string>

</resources>
