<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/list_header"
        android:orientation="horizontal"
        android:layout_margin="@dimen/list_view_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textAppearance="@style/HeaderKey"
            android:text="@string/name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textAppearance="@style/HeaderKey"
            android:text="@string/price"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textAppearance="@style/HeaderKey"
            android:text="@string/quantity"/>

        <!-- need this textview to remain same width as sell button -->
        <TextView
            android:layout_width="@dimen/main_sell_button_size"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textAppearance="@style/HeaderKey"
            android:text="@string/sell"/>

    </LinearLayout>

    <ListView
        android:id="@+id/item_list"
        android:layout_margin="@dimen/list_view_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_header"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/fab_plus"/>

    <RelativeLayout
        android:layout_centerInParent="true"
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_view_text"/>

    </RelativeLayout>

</RelativeLayout>