<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/detail_overall_margin">

    <TextView
        android:text="@string/details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/DetailTitlesText"
        android:labelFor="@id/edit_text_name"/>

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="@dimen/edit_field_margin_bottom"/>

    <TextView
        android:text="@string/details_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_text_price"
        android:textAppearance="@style/DetailTitlesText"/>

    <EditText
        android:id="@+id/edit_text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginBottom="@dimen/edit_field_margin_bottom"/>

    <TextView
        android:text="@string/details_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/DetailTitlesText"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_field_margin_bottom">

        <Button
            android:id="@+id/subtract_button"
            android:layout_width="@dimen/detail_quantity_picker_button"
            android:layout_height="@dimen/detail_quantity_picker_button"
            android:background="@drawable/minus_button"/>

        <TextView
            android:id="@+id/quantity"
            android:layout_marginStart="@dimen/detail_quantity_picker_count_margins"
            android:layout_marginEnd="@dimen/detail_quantity_picker_count_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>

        <Button
            android:id="@+id/add_button"
            android:layout_width="@dimen/detail_quantity_picker_button"
            android:layout_height="@dimen/detail_quantity_picker_button"
            android:background="@drawable/plus_button"/>

    </LinearLayout>

    <TextView
        android:text="@string/details_supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_text_supplier_name"
        android:textAppearance="@style/DetailTitlesText"/>

    <EditText
        android:id="@+id/edit_text_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="@dimen/edit_field_margin_bottom"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/details_supplier_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_text_supplier_phone"
            android:textAppearance="@style/DetailTitlesText"/>

        <Button
            android:id="@+id/phone_button"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:layout_width="@dimen/phone_button_size"
            android:layout_height="@dimen/phone_button_size"
            android:background="@drawable/phone"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/edit_text_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginBottom="@dimen/edit_field_margin_bottom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item_requirements"/>

</LinearLayout>